--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fruitlocker",
   "main": "server.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "mongoose": "^4.3.6"
