--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
-    "mongoose": "^4.3.6"
+    "mongoose": "^4.3.6",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0"
   }
 }
